# Walleye

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
.github/workflows/: rust.yml
src/: board.rs  configs.rs  draw_table.rs  engine.rs  evaluation.rs  lib.rs  main.rs  move_generation.rs  search.rs  time_control.rs  transposition_table.rs  uci.rs  utils.rs  zobrist.rs
